# prayfetch

./: CMakeLists.txt  README.md  prayfetch.conf  times_cache.json  verses.json
src/: config.hpp  locales.hpp  main.cpp  prayer_manager.hpp  utils.hpp  verse_manager.hpp
